<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:name="fr.ugo.inventori.ListItemFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="fill_horizontal"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical"
    android:minHeight="65dip"
    android:orientation="horizontal"
    android:paddingBottom="5dip"
    android:paddingLeft="5dip"
    android:paddingRight="0dip"
    android:paddingTop="5dip"
    tools:context=".ItemListFragment"
    tools:layout="@android:layout/item_list" >

    <CheckBox
        android:id="@+id/list_item_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/list_item_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light" />

    <ImageView
        android:id="@+id/ic_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:contentDescription="@string/delivery_icon_content_description"
        android:src="@drawable/ic_delivery" />

    <ImageView
        android:id="@+id/ic_to_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:contentDescription="@string/delivery_icon_content_description"
        android:src="@drawable/ic_to_order" />

    <LinearLayout
        android:id="@+id/list_item_button_set"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="right|center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/list_item_destock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/destock_content_desc"
            android:scaleY="-1"
            android:src="@drawable/cling_arrow_up"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/list_item_quantity"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/list_item_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/stock_content_desc"
            android:src="@drawable/cling_arrow_up"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>